<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="com.example.ramonsl.apphotel.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:contentDescription="@string/app_logo"
            android:padding="4dp"
            app:srcCompat="@mipmap/ic_launcher" />


        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/foto_piscina"
            android:padding="4dp"
            android:scaleType="center"

            app:srcCompat="@drawable/hotel" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="16dp"
            android:text="@string/app_desc"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tcMaiores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="16dp"
            android:text="@string/app_maiores"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="32sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffff"
            >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/holo_blue_dark">

    <ImageButton
        android:id="@+id/ibCall"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_weight="2"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="@string/ic_phone"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/tvFone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:padding="16dp"
        android:text="@string/app_number"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"


        />

</LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/holo_blue_dark">

                <ImageButton
                    android:id="@+id/imSite"
                    style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_dark"
                    android:contentDescription="@string/ic_site"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/earth" />

                <TextView
                    android:id="@+id/tcSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="16dp"
                    android:text="@string/app_url"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"

                    />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/holo_blue_dark">

                <ImageButton
                    android:id="@+id/imLocalizacao"
                    style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_dark"
                    android:contentDescription="@string/ic_local"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/location2" />

                <TextView
                    android:id="@+id/tcLocalizacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="16dp"
                    android:text="@string/app_local"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"

                    />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/holo_blue_dark">

                <ImageButton
                    android:id="@+id/imFace"
                    style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_dark"
                    android:contentDescription="@string/ic_fan"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/facebook2" />

                <TextView
                    android:id="@+id/tcFace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="16dp"
                    android:text="@string/app_rede"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"

                    />

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</ScrollView>
